--- a/m/citi/cit.html
+++ b/m/citi/cit.html
@@ -15,8 +15,12 @@
     <meta property="og:site_name" content="Citibanamex">
     <meta property="og:url" content="https://www.banamex.com">
     <meta property="og:description" content="El Banco Nacional de México te ofrece tarjetas de crédito, seguros e inversiones; abre tu cuenta con nosotros y accede a promociones y beneficios exclusivos.">
-    <meta property="og:type" content="website">
     <meta property="og:image" content="https://banamex.com/assets/img/home/citibanamexLogo.jpg">
+	<meta property="og:image:width" content="1093" />
+	<meta property="og:image:height" content="666" />
+	<meta property="og:image:type" content="image/png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="https://banamex.com/assets/img/home/citibanamexLogo.jpg"/>
+    <meta name="msapplication-TileImage" content="https://banamex.com/assets/img/home/citibanamexLogo.jpg" sizes="144x144"/>
 
     <link rel="canonical" href="https://www.banamex.com">
     <link rel="alternate" href="https://www.banamex.com" hreflang="es">
