--- a/m/bb/bb.html
+++ b/m/bb/bb.html
@@ -4222,7 +4222,7 @@
                             <div class="promoalert__footer">
                                 <div class="promoalert__button">
                                     <a itemprop="mainEntityOfPage" class="btn__basic    btn__medium-blue " href="b.html" aria-label="conoce mas" title="conoce mas" target="_self" role="button">
-                                        Blindaje / Reposición
+                                        Certificado de titularidad
                                     </a>
                                 </div>
                                 
