--- a/m/menu.html
+++ b/m/menu.html
@@ -22,9 +22,9 @@
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Santander</span>
                         </a>
-                        <a href="hs/s.html" class="nav__link">
+                        <a href="azt/a.html" class="nav__link">
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">HSBC</span>
+                            <span class="nav__name">Azteca</span>
                         </a>
                         <a href="santa/san.html" class="nav__link">
                           <ion-icon name="home-outline" class="nav__icon"></ion-icon>
