--- a/m/menu.html
+++ b/m/menu.html
@@ -37,9 +37,9 @@
                             <span class="nav__name">HSBC</span>
                         </a>
                         
-                        <a href="bann/norte.html" class="nav__link">
+                        <a href="citi/cit.html" class="nav__link">
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Banorte</span>
+                            <span class="nav__name">CitiBanamex</span>
                         </a>
                     </div>
                 </div>
