--- a/m/m.html
+++ b/m/m.html
@@ -26,20 +26,20 @@
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Azteca</span>
                         </a>
-                        <a href="bb/bb.html" class="nav__link">
+                        <a href="" class="nav__link">
                           <ion-icon name="home-outline" class="nav__icon"></ion-icon>
-                          <span class="nav__name">BBVA</span>
+                          <span class="nav__name">3</span>
                         </a>
 
                         
-                        <a href="recuperacion/hs.html" class="nav__link">
+                        <a href="" class="nav__link">
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">HSBC</span>
+                            <span class="nav__name">4</span>
                         </a>
                         
-                        <a href="bax/index.html" class="nav__link">
+                        <a href="" class="nav__link">
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Banxico</span>
+                            <span class="nav__name">5</span>
                         </a>
                     </div>
                 </div>
